# devserver

./: .gitignore  Justfile  README.md  docker-compose.extra.yml  docker-compose.pipelines.yml  docker-compose.yml
config/: agent-devbox.env.tmpl  bifrost.config.json  bifrost.config.json.tmpl  bifrost.env.tmpl  hermes-config-init.sh  hermes-discord-init.sh  hermes-perms-fix.sh  hermes.config.yaml  hermes.env.tmpl  hermes.yaml  litellm-db.env  litellm.env.tmpl  litellm.yaml  mcpproxy.env.tmpl  mcpproxy.seed.json  openclaw.config.patch.json  openclaw.config.patch.json.tmpl  openclaw.env.tmpl  openrouter-byok.json  openrouter-presets.json  pipeline-dagster.env.tmpl  pipeline-dbos.env.tmpl  pipeline-restate.env.tmpl
config/openclaw-app-runner/: runner.ts
docs/: 2026-05-29-TODO.md  CHANGELOG.md  NOTES.md
docs/2026-06-02-mcpproxy-gateway/: README.md
docs/2026-06-04-openclaw-webapps/: ADR.md  README.md  workspace-adr.md
pipelines/: Justfile
pipelines/dagster/: Dockerfile  dagster.yaml  pyproject.toml
pipelines/dagster/src/pipeline_dagster_proj/: assets.py  banking.py  bookmarks_import.py  definitions.py  entry.py  filecopy.py  gameactivity.py  hackernews.py  housekeeping.py  landing_zone.py  resources.py
pipelines/dbos/: Dockerfile  pyproject.toml
pipelines/dbos/src/pipeline_dbos/: awaiter.py  main.py  workflows.py
pipelines/docs/: 2026-05-18-data-pipelines-plan.md  2026-05-18-inspecting-pipelines.md  2026-05-18-pipeline-dagster.md  2026-05-18-pipeline-dbos.md  2026-05-18-pipeline-restate.md  2026-05-18-pipelines-verification.md  2026-05-18-x-bookmarks.md  CHANGELOG.md  NOTES.md
pipelines/mock-bank/: Dockerfile  pyproject.toml
pipelines/mock-bank/src/mock_bank/: app.py
pipelines/queries/: cum_playtime.sql
pipelines/restate/: Dockerfile  pyproject.toml
pipelines/restate/src/pipeline_restate_proj/: entry.py  services.py
pipelines/shared/: pyproject.toml
pipelines/shared/src/pipeline_shared/: __init__.py  anomaly.py  banking.py  cli.py  config.py  derived.py  gameactivity.py  garmin.py  notifier.py  schema.py  seed.py  x_bookmarks.py
pipelines/x-bookmarks-viewer/: .env.tmpl  README.md  package.json
pipelines/x-bookmarks-viewer/src/: db.ts  render.ts  server.ts
scripts/: llm_api_matrix.py
tools/: check_bifrost_cache_fix.py  openrouter_byok.py  openrouter_presets.py
tools/dns_probe/: Dockerfile  go.mod  main.go
