[project]
name = "pipeline-dagster"
version = "0.1.0"
description = "Dagster implementation of the Garmin + banking pipeline"
requires-python = ">=3.14"
dependencies = [
    "dagster>=1.9",
    "dagster-webserver>=1.9",
    "dagster-postgres>=0.25",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pipeline-shared",
    "playwright>=1.45",
    "python-multipart>=0.0.9",
    "httpx>=0.27",
]

[project.scripts]
pipeline-dagster-server = "pipeline_dagster_proj.entry:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
pipeline-shared = { path = "../shared" }

[tool.hatch.build.targets.wheel]
packages = ["src/pipeline_dagster_proj"]

[tool.dagster]
module_name = "pipeline_dagster_proj.definitions"
