[project]
name = "mock-bank"
version = "0.1.0"
description = "A tiny fake bank for testing browser-automated import pipelines"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "itsdangerous>=2.2",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
]

[project.scripts]
mock-bank = "mock_bank.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mock_bank"]
