[project]
name = "pipeline-shared"
version = "0.1.0"
description = "Shared library for Garmin/banking pipelines (Dagster, DBOS, Restate)"
requires-python = ">=3.14"
dependencies = [
    "garmin-fetch",
    "psycopg[binary]>=3.1",
    "httpx>=0.27",
    "playwright>=1.45",
    "python-dotenv>=1.0",
]

[project.scripts]
pipeline-shared = "pipeline_shared.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
garmin-fetch = { path = "/projects/garmin-fetch" }

[tool.hatch.build.targets.wheel]
packages = ["src/pipeline_shared"]
